﻿2025.2
- Added new code generator template settings:
  - Line endings (LF or CRLF)
  - Encoding file with BOM

2025.1
- Added new feature 'Mark for export' on resources in tree
  - New 'Export marked...' from tree
- Added new standalone code generator (when LHQ.App.exe is run outside of VS)

2023.1
- Fixed bug #9, VS2022 bug when tt generators throws null reference exception

2022.3
- Fixed bug #6, VS2022 bug when generating C# files from T4 template (Type XYZ exists in both EnvDTE and *.Interop)

2022.2
- Fixed bug #4 (Type 'OAProjectItem' is not marked as serializable in VS2022 on files generation)
- Implemented feature #5 (Do not serialize "metadatas" when there is no code generator attached)

2022.1
- Fixed bug #2 (Option Allow resources under root should be available for all item templates)
- Fixed bug #3 (Inconsistency of tabs and spaces in generated output C# files)

2021.6
- Added new project templates for ASP.NET Core NET5 and NET6(only for Visual Studio 2022)

2021.5
- Fixed non working shortcuts (Ctrl+D, Ctrl+Ins, Shift+Ins ...)

2021.4
- Fixed issue with some languages not translated by translator (e.g. zh-Hans and zh-Hant)
- Fixed issue when command 'translate all empty only resources' will also translate not empty when executed on category or model

2021.3
- Fixed missing "LHQ *" item templates to create new LHQ files
- Autofix missing code generator settings in lhq files

2021.1
- New version for Visual Studio 2022

2.0.0
- Removed licensing integration as Localization HQ Editor became FREE for all

1.2.2.0
- Minor fix in ASP.NET Core Template

1.2.1.0
- Added new option 'MissingTranslationFallbackToPrimary' into ASP.NET Core Template
  this options will generate code that returns primary language text in case of missing translation in foreign language

1.2.0.0
- Expiration of full version license was extended to 1.1.2022, for everyone
- Show error dialog on unsupported language(s)
- Added 'Translator' button into toolbar