@@ -27,27 +27,50 @@ using System.Text.RegularExpressions;
 
 namespace LHQ.Gen.Lib
 {
+    /// <summary>
+    /// Represents information above single generated file as a result of <see cref="Generator.Generate"/> method.
+    /// </summary>
     public sealed class GeneratedFile
     {
+        private readonly LineEndings _lineEndings;
         private readonly string _content;
         private static readonly Regex _regexLF = new Regex(@"\r\n|\r", RegexOptions.Compiled);
         private static readonly Regex _regexCRLF = new Regex(@"(\r(?!\n))|(?<!\r)\n", RegexOptions.Compiled);
-        
+
+        /// <summary>
+        /// Initializes new instance of <see cref="GeneratedFile"/>
+        /// </summary>
+        /// <param name="fileName">File name of generated file, usually relative path to source *.lhq model fie.</param>
+        /// <param name="content">Generate content string that should be written to <paramref name="fileName"/>.</param>
+        /// <param name="bom">BOM marker that should be used when writing <paramref name="content"/> to <paramref name="fileName"/> file.</param>
+        /// <param name="lineEndings">Line endings that should be used when writing <paramref name="content"/> to <paramref name="fileName"/> file.</param>
         public GeneratedFile(string fileName, string content, bool bom, LineEndings lineEndings)
         {
             FileName = fileName;
             _content = content;
             Bom = bom;
-            LineEndings = lineEndings;
+            _lineEndings = lineEndings;
         }
-        
+
+        /// <summary>
+        /// Gets file name of generated file, usually relative path to source *.lhq model fie.
+        /// </summary>
         public string FileName { get; }
 
+        /// <summary>
+        /// Gets flag whenever to write BOM marker when saving content (from <see cref="GetContent"/>) to <see cref="FileName"/> file. 
+        /// </summary>
         public bool Bom { get; }
 
-        public LineEndings LineEndings { get; }
-
-        public string GetContent(bool applyLineEndings = true)
+        /// <summary>
+        /// Gets generated content string that should be written to <see cref="FileName"/> file.
+        /// </summary>
+        /// <param name="applyLineEndings">Flag whenver to apply line endings to content or not.</param>
+        /// <returns>
+        /// Returns generated content string, without any modifications if <paramref name="applyLineEndings"/> is false or
+        /// with line endings applied if <paramref name="applyLineEndings"/> is true.
+        /// </returns>
+        public string GetContent(bool applyLineEndings)
         {
             if (!applyLineEndings)
             {
@@ -59,7 +82,7 @@ namespace LHQ.Gen.Lib
                 return _content;
             }
             
-            return LineEndings == LineEndings.LF 
+            return _lineEndings == LineEndings.LF 
                 ? _regexLF.Replace(_content, "\n") 
                 : _regexCRLF.Replace(_content, "\r\n");
         }
